[gd_scene load_steps=27 format=4 uid="uid://bumb1twadykbe"]

[ext_resource type="Script" uid="uid://bhsumsjotnofp" path="res://MatchCode/Macro/Match.gd" id="1_vn08p"]
[ext_resource type="Texture2D" uid="uid://7wl6iyg0by3e" path="res://assets/backgrounds/Tilesets/TilesetFloor.png" id="2_6n0fa"]
[ext_resource type="FontFile" uid="uid://iyo6gxnksikb" path="res://assets/fonts/m3x6.ttf" id="2_enbcy"]
[ext_resource type="Script" uid="uid://b17iollxxowkb" path="res://SelectedUnitPanel.gd" id="2_pyf5s"]
[ext_resource type="Texture2D" uid="uid://q1kfwdjlew4s" path="res://assets/Ui/Receptacle/Receptacle Sphere/BackgroundIron2.png" id="2_vmbwa"]
[ext_resource type="Texture2D" uid="uid://7dpqeltqd0ba" path="res://assets/backgrounds/Tilesets/TilesetVillageAbandoned.png" id="3_jdlt6"]
[ext_resource type="Script" uid="uid://p4rnx5qqdsic" path="res://MatchCode/Macro/GridOverlay.gd" id="4_gd60q"]
[ext_resource type="Shader" uid="uid://c0fnd2yweaw47" path="res://Scenes/Macro/classicon.gdshader" id="4_x1gyx"]
[ext_resource type="PackedScene" uid="uid://c4xknq2rlu30u" path="res://Scenes/Micro/Unit.tscn" id="5_pifqa"]
[ext_resource type="Resource" uid="uid://cbc7c1ugatr1u" path="res://class_profiles/hunter/hunter_stats.tres" id="6_jdlt6"]
[ext_resource type="Resource" uid="uid://bi36c62kvu54g" path="res://class_profiles/hunter/hunter_anim.tres" id="6_vig26"]
[ext_resource type="Script" uid="uid://c3pvl2ohyuols" path="res://MatchCode/Macro/GridManager.gd" id="7_vmbwa"]
[ext_resource type="Script" uid="uid://dl1aagbds0cap" path="res://MatchCode/Macro/action_resolver.gd" id="8_enbcy"]
[ext_resource type="Resource" uid="uid://qn7d38ui2tek" path="res://class_profiles/hunter/hunter_vfx.tres" id="8_jdlt6"]
[ext_resource type="Resource" uid="uid://dutkukdgtmdjq" path="res://class_profiles/knight/knight_stats.tres" id="9_pifqa"]
[ext_resource type="Script" uid="uid://bo8wjrofy2t4l" path="res://MatchCode/Macro/turn_manager.gd" id="9_pyf5s"]
[ext_resource type="Resource" uid="uid://b5f6t7wafjye6" path="res://class_profiles/knight/knight_anim.tres" id="10_vig26"]
[ext_resource type="Resource" uid="uid://bd5s7q2h5c6ls" path="res://class_profiles/knight/knight_vfx.tres" id="11_vig26"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_21xkr"]
texture = ExtResource("2_6n0fa")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
11:4/0 = 0
12:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
11:11/0 = 0
12:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
0:18/0 = 0
1:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
11:18/0 = 0
12:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
0:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0

[sub_resource type="TileSet" id="TileSet_6bp64"]
sources/1 = SubResource("TileSetAtlasSource_21xkr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_344ge"]
texture = ExtResource("3_jdlt6")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
1:6/0 = 0
2:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
1:9/0 = 0
2:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
0:6/0 = 0

[sub_resource type="TileSet" id="TileSet_ynf5e"]
sources/0 = SubResource("TileSetAtlasSource_344ge")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyf5s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x1gyx"]
bg_color = Color(0, 0.5851858, 0.1671013, 1)
border_width_top = 20
border_width_right = 10
border_width_bottom = 20
border_color = Color(0.5529412, 0.5921569, 0.49803922, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vb7k5"]
bg_color = Color(0.7598554, 0.08768926, 0, 1)
border_width_top = 20
border_width_right = 10
border_width_bottom = 20
border_color = Color(0.5529412, 0.5921569, 0.49803922, 1)
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vb7k5"]
shader = ExtResource("4_x1gyx")
shader_parameter/softness = 0.02

[node name="Match" type="Node2D"]
script = ExtResource("1_vn08p")

[node name="Level" type="Node2D" parent="."]

[node name="GroundLayer" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAwAAAAAAAEAAQAAAAwAAAAAAAIAAQAAAAwAAAAAAAMAAQAAAAwAAAAAAAQAAQAAAAwAAAAAAAUAAQAAAAwAAAAAAAYAAQAAAAwAAAAAAAcAAQAAAAwAAAAAAAgAAQAAAAwAAAAAAAkAAQAAAAwAAAAAAAoAAQAAAAwAAAAAAAsAAQAAAAwAAAABAAAAAQAAAAwAAAABAAEAAQAAAAwAAAABAAIAAQAAAAwAAAABAAMAAQAAAAwAAAABAAQAAQAAAAwAAAABAAUAAQAAAAwAAAABAAYAAQAAAAwAAAABAAcAAQAAAAwAAAABAAgAAQAAAAwAAAABAAkAAQAAAAwAAAABAAoAAQAAAAwAAAABAAsAAQAAAAwAAAACAAAAAQAAAAwAAAACAAEAAQAAAAwAAAACAAIAAQAAAAwAAAACAAMAAQAAAAwAAAACAAQAAQAAAAwAAAACAAUAAQAAAAwAAAACAAYAAQAAAAwAAAACAAcAAQAAAAwAAAACAAgAAQAAAAwAAAACAAkAAQAAAAwAAAACAAoAAQAAAAwAAAACAAsAAQAAAAwAAAADAAAAAQAAAAwAAAADAAEAAQAAAAwAAAADAAIAAQAAAAwAAAADAAMAAQAAAAwAAAADAAQAAQAAAAwAAAADAAUAAQAAAAwAAAADAAYAAQAAAAwAAAADAAcAAQAAAAwAAAADAAgAAQAAAAwAAAADAAkAAQAAAAwAAAADAAoAAQAAAAwAAAADAAsAAQAAAAwAAAAEAAAAAQAAAAwAAAAEAAEAAQAAAAwAAAAEAAIAAQAAAAwAAAAEAAMAAQAAAAwAAAAEAAQAAQAAAAwAAAAEAAUAAQAAAAwAAAAEAAYAAQAAAAwAAAAEAAcAAQAAAAwAAAAEAAgAAQAAAAwAAAAEAAkAAQAAAAwAAAAEAAoAAQAAAAwAAAAEAAsAAQAAAAwAAAAFAAAAAQAAAAwAAAAFAAEAAQAAAAwAAAAFAAIAAQAAAAwAAAAFAAMAAQAAAAwAAAAFAAQAAQAAAAwAAAAFAAUAAQAAAAwAAAAFAAYAAQAAAAwAAAAFAAcAAQAAAAwAAAAFAAgAAQAAAAwAAAAFAAkAAQAAAAwAAAAFAAoAAQAAAAwAAAAFAAsAAQAAAAwAAAAGAAAAAQAAAAwAAAAGAAEAAQAAAAwAAAAGAAIAAQAAAAwAAAAGAAMAAQAAAAwAAAAGAAQAAQAAAAwAAAAGAAUAAQAAAAwAAAAGAAYAAQAAAAwAAAAGAAcAAQAAAAwAAAAGAAgAAQAAAAwAAAAGAAkAAQAAAAwAAAAGAAoAAQAAAAwAAAAGAAsAAQAAAAwAAAAHAAAAAQAAAAwAAAAHAAEAAQAAAAwAAAAHAAIAAQAAAAwAAAAHAAMAAQAAAAwAAAAHAAQAAQAAAAwAAAAHAAUAAQAAAAwAAAAHAAYAAQAAAAwAAAAHAAcAAQAAAAwAAAAHAAgAAQAAAAwAAAAHAAkAAQAAAAwAAAAHAAoAAQAAAAwAAAAHAAsAAQAAAAwAAAAIAAAAAQAAAAwAAAAIAAEAAQAAAAwAAAAIAAIAAQAAAAwAAAAIAAMAAQAAAAwAAAAIAAQAAQAAAAwAAAAIAAUAAQAAAAwAAAAIAAYAAQAAAAwAAAAIAAcAAQAAAAwAAAAIAAgAAQAAAAwAAAAIAAkAAQAAAAwAAAAIAAoAAQAAAAwAAAAIAAsAAQAAAAwAAAAJAAAAAQAAAAwAAAAJAAEAAQAAAAwAAAAJAAIAAQAAAAwAAAAJAAMAAQAAAAwAAAAJAAQAAQAAAAwAAAAJAAUAAQAAAAwAAAAJAAYAAQAAAAwAAAAJAAcAAQAAAAwAAAAJAAgAAQAAAAwAAAAJAAkAAQAAAAwAAAAJAAoAAQAAAAwAAAAJAAsAAQAAAAwAAAAKAAAAAQAAAAwAAAAKAAEAAQAAAAwAAAAKAAIAAQAAAAwAAAAKAAMAAQAAAAwAAAAKAAQAAQAAAAwAAAAKAAUAAQAAAAwAAAAKAAYAAQAAAAwAAAAKAAcAAQAAAAwAAAAKAAgAAQAAAAwAAAAKAAkAAQAAAAwAAAAKAAoAAQAAAAwAAAAKAAsAAQAAAAwAAAALAAAAAQAAAAwAAAALAAEAAQAAAAwAAAALAAIAAQAAAAwAAAALAAMAAQAAAAwAAAALAAQAAQAAAAwAAAALAAUAAQAAAAwAAAALAAYAAQAAAAwAAAALAAcAAQAAAAwAAAALAAgAAQAAAAwAAAALAAkAAQAAAAwAAAALAAoAAQAAAAwAAAALAAsAAQAAAAwAAAA=")
tile_set = SubResource("TileSet_6bp64")

[node name="BlockerLayer" type="TileMapLayer" parent="Level"]
tile_map_data = PackedByteArray("AAD+/wAAAAAEAAYAAAD+/wEAAAAEAAcAAAD+/wIAAAAEAAYAAAD+/wMAAAAEAAcAAAD+/wQAAAAEAAYAAAD+/wUAAAAEAAcAAAD+/wYAAAAEAAYAAAD+/wcAAAAEAAcAAAD+/wgAAAAEAAYAAAD+/wkAAAAEAAcAAAD+/woAAAAEAAYAAAD+/wsAAAAEAAcAAAD//wAAAAAFAAYAAAD//wEAAAAFAAcAAAD//wIAAAAFAAYAAAD//wMAAAAFAAcAAAD//wQAAAAFAAYAAAD//wUAAAAFAAcAAAD//wYAAAAFAAYAAAD//wcAAAAFAAcAAAD//wgAAAAFAAYAAAD//wkAAAAFAAcAAAD//woAAAAFAAYAAAD//wsAAAAFAAcAAAAAAP7/AAAEAAYAAAAAAP//AAAEAAcAAAAAAAsAAAAEAAYAAAAAAAwAAAAEAAcAAAABAP7/AAAFAAYAAAABAP//AAAFAAcAAAABAAsAAAAFAAYAAAABAAwAAAAFAAcAAAACAP7/AAAEAAYAAAACAP//AAAEAAcAAAACAAcAAAALAAMAAAACAAgAAAALAAQAAAACAAkAAAALAAUAAAACAAsAAAAEAAYAAAACAAwAAAAEAAcAAAADAP7/AAAFAAYAAAADAP//AAAFAAcAAAADAAcAAAAMAAMAAAADAAgAAAAMAAQAAAADAAkAAAAMAAUAAAADAAsAAAAFAAYAAAADAAwAAAAFAAcAAAAEAP7/AAAEAAYAAAAEAP//AAAEAAcAAAAEAAcAAAANAAMAAAAEAAgAAAANAAQAAAAEAAkAAAANAAUAAAAEAAsAAAAEAAYAAAAEAAwAAAAEAAcAAAAFAP7/AAAFAAYAAAAFAP//AAAFAAcAAAAFAAsAAAAFAAYAAAAFAAwAAAAFAAcAAAAGAP7/AAAEAAYAAAAGAP//AAAEAAcAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAEAAAAGAAIAAAAAAAIAAAAGAAsAAAAEAAYAAAAGAAwAAAAEAAcAAAAHAP7/AAAFAAYAAAAHAP//AAAFAAcAAAAHAAAAAAABAAAAAAAHAAEAAAABAAEAAAAHAAIAAAABAAIAAAAHAAsAAAAFAAYAAAAHAAwAAAAFAAcAAAAIAP7/AAAEAAYAAAAIAP//AAAEAAcAAAAIAAAAAAACAAAAAAAIAAEAAAACAAEAAAAIAAIAAAACAAIAAAAIAAsAAAAEAAYAAAAIAAwAAAAEAAcAAAAJAP7/AAAFAAYAAAAJAP//AAAFAAcAAAAJAAAAAAADAAAAAAAJAAEAAAADAAEAAAAJAAIAAAADAAIAAAAJAAsAAAAFAAYAAAAJAAwAAAAFAAcAAAAKAP7/AAAEAAYAAAAKAP//AAAEAAcAAAAKAAsAAAAEAAYAAAAKAAwAAAAEAAcAAAALAP7/AAAFAAYAAAALAP//AAAFAAcAAAALAAsAAAAFAAYAAAALAAwAAAAFAAcAAAAMAAAAAAAEAAYAAAAMAAEAAAAEAAcAAAAMAAIAAAAEAAYAAAAMAAMAAAAEAAcAAAAMAAQAAAAEAAYAAAAMAAUAAAAEAAcAAAAMAAYAAAAEAAYAAAAMAAcAAAAEAAcAAAAMAAgAAAAEAAYAAAAMAAkAAAAEAAcAAAAMAAoAAAAEAAYAAAAMAAsAAAAEAAcAAAANAAAAAAAFAAYAAAANAAEAAAAFAAcAAAANAAIAAAAFAAYAAAANAAMAAAAFAAcAAAANAAQAAAAFAAYAAAANAAUAAAAFAAcAAAANAAYAAAAFAAYAAAANAAcAAAAFAAcAAAANAAgAAAAFAAYAAAANAAkAAAAFAAcAAAANAAoAAAAFAAYAAAANAAsAAAAFAAcAAAA=")
tile_set = SubResource("TileSet_ynf5e")

[node name="GridOverlay" type="Node2D" parent="Level"]
script = ExtResource("4_gd60q")

[node name="Units" type="Node2D" parent="."]

[node name="Unit" parent="Units" instance=ExtResource("5_pifqa")]
position = Vector2(66, 71)
class_stats = ExtResource("6_jdlt6")
anim_profile = ExtResource("6_vig26")
vfx_profile = ExtResource("8_jdlt6")

[node name="Unit2" parent="Units" instance=ExtResource("5_pifqa")]
position = Vector2(115, 71)
team_id = 1
class_stats = ExtResource("9_pifqa")
anim_profile = ExtResource("10_vig26")
vfx_profile = ExtResource("11_vig26")

[node name="UnitHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -153.0
offset_top = -42.0
offset_right = 357.0
offset_bottom = 247.0
mouse_filter = 2
script = ExtResource("2_pyf5s")
icon_path = NodePath("Portrait/ClassIcon")
hp_bar_path = NodePath("Control/Healthbar")
ap_bar_path = NodePath("Control2/APBar")

[node name="Control" type="Control" parent="UnitHUD"]
anchors_preset = 0
offset_right = 510.0
offset_bottom = 289.0

[node name="Healthbar" type="ProgressBar" parent="UnitHUD/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.025
anchor_right = 1.0
anchor_bottom = 0.95600003
offset_left = 43.0
offset_top = 31.225
offset_right = -332.0
offset_bottom = -127.36412
grow_vertical = 2
scale = Vector2(0.8, 0.1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_enbcy")
theme_override_font_sizes/font_size = 34
theme_override_styles/background = SubResource("StyleBoxEmpty_pyf5s")
theme_override_styles/fill = SubResource("StyleBoxFlat_x1gyx")
value = 100.0
rounded = true
show_percentage = false

[node name="Control2" type="Control" parent="UnitHUD"]
anchors_preset = 0
offset_right = 510.0
offset_bottom = 289.0

[node name="APBar" type="ProgressBar" parent="UnitHUD/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_top = -0.025
anchor_right = 1.0
anchor_bottom = 0.95600003
offset_left = 43.0
offset_top = 45.225
offset_right = -343.25
offset_bottom = -118.28401
grow_vertical = 2
scale = Vector2(0.8, 0.1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_enbcy")
theme_override_font_sizes/font_size = 34
theme_override_styles/background = SubResource("StyleBoxEmpty_pyf5s")
theme_override_styles/fill = SubResource("StyleBoxFlat_vb7k5")
value = 100.0
rounded = true
show_percentage = false

[node name="Portrait" type="Control" parent="UnitHUD"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Receptacle" type="TextureRect" parent="UnitHUD/Portrait"]
layout_mode = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 54.0
offset_bottom = 57.0
texture = ExtResource("2_vmbwa")

[node name="ClassIcon" type="TextureRect" parent="UnitHUD/Portrait"]
material = SubResource("ShaderMaterial_vb7k5")
layout_mode = 0
offset_left = 18.0
offset_top = 21.999998
offset_right = 48.0
offset_bottom = 52.0
scale = Vector2(1.05, 1.05)
expand_mode = 2
stretch_mode = 6

[node name="Controllers" type="Node" parent="."]

[node name="GridManager" type="Node" parent="Controllers"]
script = ExtResource("7_vmbwa")
ground_layer_path = NodePath("../../Level/GroundLayer")
blockers_layer_path = NodePath("../../Level/BlockerLayer")

[node name="ActionResolver" type="Node" parent="Controllers"]
script = ExtResource("8_enbcy")

[node name="TurnManager" type="Node" parent="Controllers"]
script = ExtResource("9_pyf5s")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(102, 102)
zoom = Vector2(2.25, 2.25)
